# bcbp_parser

./: .gitignore  CMakeCache.txt  CMakeLists.txt  PREREQUISITES  README.txt  package.xml
include/: BCBP_Item.h  BCBP_ItemIDs.h  BCBP_Parser.h  BCBP_Utils.h  BarcodeStringParser.h  DB.h
launch/: barcode_string_handler.launch
msg/: PassengerInfo.msg  PassengerInfoItem.msg
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
scripts/: generate_air_db.sql  install_mysqlcppconnector.sh
src/: BCBP_Item.cpp  BCBP_Parser.cpp  BCBP_Utils.cpp  BCStringProducer.cpp  BarcodeStringHandler.cpp  BarcodeStringParser.cpp  BarcodeStringProducer.cpp  DB.cpp
