<?xml version="1.0"?>
<package>
  <name>bcbp</name>
  <version>0.0.0</version>
  <description>The Bar Code Boarding Pass package</description>

  <maintainer email="chiotell@in.tum.de">John Chiotellis</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/bcbp</url> -->

  <author email="chiotell@in.tum.de">John Chiotellis</author> 


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend> 
  <build_depend>message_generation</build_depend>
 
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
